<resources>
    <string name="app_name">Farm-Fresh</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="google_sign_in">Google</string>
    <string name="facebook_sign_in">Facebook</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="facebook_app_id">500631840134850</string>
    <string name="fb_login_protocol_scheme">fb1562008457441280</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_selling">Selling</string>
    <string name="menu_sign_out">Logout</string>
    <string name="user_profile_image">Profile Image</string>
    <string name="header_background">header background</string>
    <string name="marker_title">Marker title</string>
    <string name="search_hint">"Find Fruits And Veggies Near You..."</string>
    <string name="google_map_key">AIzaSyCkmV63LtrA1HeGxmyr0QyXin7ia7U38wA</string>
    <string name="product_name">Name</string>
    <string name="placeholder_product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="placeholder_product_description">Product Description</string>
    <string name="product_price">Asking Price</string>
    <string name="placeholder_product_price">Asking Price</string>
    <string name="btn_next_text">Next: Add Images</string>
    <string name="btn_cancel">Cancel</string>

    <!-- email password sign up and sign in constants -->
    <string name="user_full_name">Your Full Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="btn_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_address_price">Product Address</string>
    <string name="product_address">Address</string>


    <string name="no_location_provided">No location data provided</string>
    <string name="no_address_provided">No address data provided</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="address_found">Address found</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="invalid_address_used">Invalid address used</string>



</resources>
