<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EmailPasswordSignUpFragment"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/product_info_shape">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_full_name_text_input_layout"
            android:layout_width="match_parent"
            android:padding="@dimen/product_info_margin"
            app:hintTextAppearance="@style/TextInputEditTextAppearance"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_above="@+id/user_email_text_input_layout"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:imeOptions="actionNext"
                android:background="@drawable/product_info_shape"
                android:hint="@string/user_full_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_email_text_input_layout"
            android:layout_width="match_parent"
            android:padding="@dimen/product_info_margin"
            app:hintTextAppearance="@style/TextInputEditTextAppearance"
            android:layout_height="wrap_content"
            android:layout_above="@+id/user_password_text_input_layout"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="69dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:background="@drawable/product_info_shape"
                android:hint="@string/user_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_password_text_input_layout"
            android:layout_width="match_parent"
            android:padding="@dimen/product_info_margin"
            app:hintTextAppearance="@style/TextInputEditTextAppearance"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:layout_above="@+id/btnSubmit"
            android:layout_alignParentEnd="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:background="@drawable/product_info_shape"
                android:hint="@string/user_password"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btnSubmit"
            android:textAllCaps="false"
            android:paddingTop="@dimen/product_info_margin"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="95dp" />

    </RelativeLayout>
</layout>
