<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farmfresh.farmfresh.fragments.UploadProductFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:background="@drawable/product_info_shape"
        android:id="@+id/rlProductInfo"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llProductInfoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="18sp"
                tools:text="@string/product_name"/>

            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.8"
                android:gravity="center"
                tools:text="@string/product_name"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llProductInfoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llProductInfoName"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="left"
                tools:text="@string/product_description"/>

            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvDescriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.8"
                android:gravity="center"
                tools:text="@string/product_description"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llProductInfoPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llProductInfoDescription"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="left"
                tools:text="@string/product_price"/>

            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/tvPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.8"
                android:gravity="center"
                tools:text="@string/product_price"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llImageViews"
        android:layout_below="@+id/rlProductInfo"
        android:layout_margin="5dp"
        android:background="@drawable/product_info_shape">
        <LinearLayout
            android:paddingTop="20dp"
            android:id="@+id/llImagesRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivProductImage1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>
            <ImageView
                android:id="@+id/ivProductImage2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="20dp"
            android:layout_below="@+id/llImagesRow1"
            android:id="@+id/llImagesRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivProductImage3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>
            <ImageView
                android:id="@+id/ivProductImage4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
